# burritobot

./: .gitignore  Cargo.toml  README.md
crates/bb-chipotle/: Cargo.toml  README.md
crates/bb-chipotle/src/: api_key.rs  client.rs  constants.rs  error.rs  lib.rs  locations.rs  util.rs
crates/bb-chipotle/src/api_interfaces/: menu.rs
crates/bb-chipotle/src/menu/: get.rs  mod.rs  summary.rs
pepper-api/: Cargo.toml  README.md
pepper-api/src/: error.rs  lib.rs  locations.rs  menu.rs
pepper-api/src/api_interfaces/: locations.rs  mod.rs
