[package]
name = "burritobot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/bb-chipotle",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
bb-chipotle = { path = "./crates/bb-chipotle" }
reqwest = { version = "0.12.9", features = ["gzip", "brotli"] }
clap = { version = "4.5.20", features = ["derive"] }
serde_json = "1.0.132"
