[package]
name = "burritobot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/bb-chipotle",
]

[dependencies]
anyhow = "1.0"
bb-chipotle = { path = "./crates/bb-chipotle" }
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12.9", features = ["gzip", "brotli"] }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
