[package]
name = "pepper-api"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.20"
regex = "1.11"
reqwest = { version = "0.12", features = ["brotli", "gzip"] }
rustls = "0.23.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["fs"]}

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
