[package]
name = "bb-chipotle"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.20.2"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["brotli", "gzip"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
httpmock = "0.7.0"
tempfile = "3"
